# era-gp-sim

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  erasim-res.rc  main.cpp
source/: CMakeLists.txt
source/arch/: AbstractInstructionNodeFactory.cpp  AbstractNodeFactories.cpp  AbstractNodeFactories.s  CMakeLists.txt
source/arch/common/: CMakeLists.txt  abstract-instruction-node-factory.cpp  abstract-instruction-node.cpp  abstract-node-factories.cpp  abstract-node-factory-collection.cpp  abstract-register-node-factory.cpp  abstract-register-node.cpp  abstract-syntax-tree-node.cpp  abstract_node_factories.cpp  architecture-brewery.cpp  architecture-formula.cpp  architecture.cpp  binarydata-node.cpp  constituent-information.cpp  crash-instruction-node.cpp  datatype-information.cpp  extension-information.cpp  immediate-node.cpp  information-interface.cpp  information.cpp  instruction-assembler.cpp  instruction-information.cpp  instruction-key.cpp  instruction-set.cpp  node-factory-collection-maker.cpp  node-factory-collection.cpp  register-information.cpp  register-node.cpp  sleep-instruction-node.cpp  unit-information.cpp  validation-result.cpp
source/arch/riscv/: CMakeLists.txt  control-flow-instructions.cpp  control_flow_instructions.cpp  data-node-factory.cpp  documentation-builder.cpp  factory-map.cpp  format.cpp  formats.cpp  immediate-node-factory.cpp  instruction-context-information.cpp  instruction-node-factory.cpp  instruction-node.cpp  instruction_node.cpp  integer-instructions.cpp  integer_instructions.cpp  load-store-instructions.cpp  load_store_instructions.cpp  lui-auipc-instructions.cpp  mul-div-instructions.cpp  mul_div_instructions.cpp  register-access-node-factory.cpp  register-node-factory.cpp  register-node.cpp  riscv-node-factories.cpp  riscv_node_factories.cpp  simulator-instructions.cpp  word-instruction-wrapper.cpp
source/common/: CMakeLists.txt  bigint.cpp  status.cpp  string-conversions.cpp  translateable.cpp  utility.cpp
source/core/: CMakeLists.txt  condition-timer.cpp  conversions.cpp  memory-access.cpp  memory-value.cpp  memory.cpp  parsing-and-execution-unit.cpp  project-module.cpp  project.cpp  register-set.cpp  register.cpp  registerset.cpp  registervec.cpp  scheduler.cpp  snapshot.cpp  standard-float-conversions.cpp
source/parser/: CMakeLists.txt  IntermediateInstruction.cpp  IntermediateOperation.cpp  IntermediateRepresentator.cpp  SymbolTable.cpp  code-position-interval.cpp  code-position.cpp  compile-error-annotator.cpp  compile-error-list.cpp  compile-error.cpp  compile-state.cpp  constant-directive.cpp  expression-compiler-clike.cpp  expression-parser.cpp  expression-tokenizer.cpp  final-command.cpp  final-representation.cpp  float-parser.cpp  int-parser.cpp  integer-parser.cpp  intermediate-directive.cpp  intermediate-instruction.cpp  intermediate-macro-instruction.cpp  intermediate-operation.cpp  intermediate-output-command.cpp  intermediate-output-representation.cpp  intermediate-parameters.cpp  intermediate-representator.cpp  intermediate_instruction.cpp  intermediate_operation.cpp  intermediate_representator.cpp  line-interval.cpp  macro-directive-table.cpp  macro-directive.cpp  macro-end-directive.cpp  macro-information.cpp  memory-allocator.cpp  memory-definition-directive.cpp  memory-reservation-directive.cpp  memory-section-definition.cpp  (+19 more)
source/parser/common/: CMakeLists.txt  code-position-interval.cpp  code-position.cpp  compile-error-list.cpp  compile-error.cpp  final-command.cpp  final-representation.cpp  macro-information.cpp  parser-factory.cpp  parser.cpp  syntax-information.cpp
source/parser/factory/: CMakeLists.txt  parser-factory.cpp
source/parser/independent/: CMakeLists.txt  allocate-memory-immutable-arguments.cpp  constant-directive.cpp  enhance-symbol-table-immutable-arguments.cpp  execute-immutable-arguments.cpp  expression-compiler-clike.cpp  expression-tokenizer.cpp  integer-parser.cpp  intermediate-directive.cpp  intermediate-instruction.cpp  macro-directive.cpp  (+23 more)
source/ui/: BlankComponent.qml  CMakeLists.txt  ErrorDialog.qml  GUI.pro  InnerSplitviews.qml  InnerSplitviewsEditor.qml  ProjectCreationScreen.qml  Registers.pro  SplitView.pro  Splitview.qml  SplitviewItem.qml  clipboard-adapter.cpp  color-mode.cpp  console-component.cpp  consolemodel.cpp  editor-component.cpp  foo.cpp  gui-Project.cpp  gui-project.cpp  guiproject.cpp  input-button-model.cpp  input-click-model.cpp  input-key-model.cpp  input-text-model.cpp  inputbuttonmodel.cpp  inputclickmodel.cpp  inputtextmodel.cpp  main.cpp  main.qml  mainFirst.qml  memory-component-presenter.cpp  memorycomponentpresenter.cpp  output-component.cpp  pixel-display-color-mode.cpp  pixel-display-options.cpp  pixel-display-painted-item.cpp  project-settings.cpp  qml.qrc  qproject.cpp  qproject.hpp  (+13 more)
tests/: CMakeLists.txt
tests/arch/: CMakeLists.txt
tests/common/: CMakeLists.txt  bit-builder-tests.cpp  common-assert-tests.cpp  common-bit-builder-tests.cpp  common-string-conversions-tests.cpp  common-utility-tests.cpp  integer-information-test.cpp  multiregex-test.cpp
tests/core/: CMakeLists.txt  bigint-test.cpp  conversion-test.cpp  conversions-test.cpp  memory-test.cpp  memory-value-test.cpp  project-test.cpp  queue-test.cpp  register-set-test.cpp  task-scheduler-test.cpp  test-memory-value.cpp  test-memory-value.inc
tests/parser/: CMakeLists.txt  expression-compiler-test.cpp  expression-compiler-unittest.cpp  float-parser-test.cpp  int-parser-test.cpp  integer-parser-test.cpp  intermediate-instruction-test.cpp  intermediate-instruction-unittest.cpp  intermediate-representator-test.cpp  intermediate-representator-unittest.cpp  intermediate_instruction_unittest.cpp  intermediate_representator_unittest.cpp  memory-allocator-test.cpp  parser-factory-test.cpp  riscv-parser-test.cpp  riscv-parser-unittest.cpp  string-parser-test.cpp  symbol-table-test.cpp  symbol_table_unittest.cpp  syntax-information-test.cpp  syntax-tree-generator-test.cpp
tests/system/: CMakeLists.txt  program-execution-test.cpp
(+838 files in other folders)
